# trlogic_test

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: file_utils.rs  http_handlers.rs  lib.rs  main.rs  microservice.rs  thumbnail.rs
tests/: test_microservice.rs
