[package]
name = "trlogic_test"
version = "0.1.0"
authors = ["Alexey V. Litvinov <lialsoftlab@yandex.ru>"]
edition = "2018"

[dependencies]
base64 = "0.10"
chrono = "0.4"
ctrlc = "3.1.2"
fs2 = "0.4"
image = "0.21"
log = "0.4.6"
mrq = { version = "0.1", features = ["https"] }
multipart = { version = "0.15", features = ["tiny_http"] }
pretty_env_logger = "0.3.0"
rouille = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"

[dev-dependencies]
regex = "1.1"